--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .div-width{
-    width: 28vw;
+    width: 40vw;
     background-color: rgb(250, 250, 255)
 }
 .div-padding{
@@ -39,4 +39,17 @@ input::-webkit-inner-spin-button {
 .deactivated{
     background-color: lightgray !important;
     color: #212529 !important;
+}
+
+@media only screen and (max-width: 1200px) {
+    .div-width{
+        width: 55vw;
+    }
+}
+
+@media only screen and (max-width: 620px) {
+    .div-width{
+        width: 90vw;
+        min-width: fit-content;
+    }
 }
