--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.container{
+    width: fit-content !important;
+}
 .div-width{
     width: 40vw;
     background-color: rgb(250, 250, 255)
@@ -39,6 +42,9 @@ input::-webkit-inner-spin-button {
 .deactivated{
     background-color: lightgray !important;
     color: #212529 !important;
+}
+.div-footer{
+    width: 100%;
 }
 
 @media only screen and (max-width: 1200px) {
